Dim E-xidmetler link

--- a/e_xidmetler.html
+++ b/e_xidmetler.html
@@ -62,7 +62,7 @@
 						</a>
 					</li>
 
-					<li><a href="#">
+					<li><a href="https://ekabinet.dim.gov.az//">
 							Şəxsi kabinet
 						</a>
 					</li>
@@ -75,7 +75,7 @@
 					</li>
 
 					<li>
-						<a href="#">
+						<a href="https://www.dxr.az/xidmetler/struktur/E77BE64D-B56F-43D2-84D5-9EC4AB218DA2">
 							Dövlət xidmətləri
 						</a>
 					</li>
