--- a/e_xidmetler.html
+++ b/e_xidmetler.html
@@ -226,7 +226,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -262,7 +262,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -297,7 +297,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -341,7 +341,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -376,7 +376,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -411,7 +411,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -454,7 +454,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -490,7 +490,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -526,7 +526,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -562,7 +562,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -602,7 +602,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -636,7 +636,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -670,7 +670,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -704,7 +704,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -746,7 +746,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -780,7 +780,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -814,7 +814,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -849,7 +849,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -883,7 +883,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -925,7 +925,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -962,7 +962,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -996,7 +996,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -1030,7 +1030,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
@@ -1066,7 +1066,7 @@
 										</li>
 										<li>
 											<a class="sub-menu-icon" href="#"><i class="fas fa-bookmark"></i></a>
-											<span class="content">Test imtahanı proqramları</span>
+											<span class="content">Xidmətin reqlamenti</span>
 										</li>
 
 									</ul>
