--- a/e_xidmetler.html
+++ b/e_xidmetler.html
@@ -791,7 +791,7 @@
 								<div class="box-content">
 									<div class="content">
 										<span class="icon">
-											<i class="fas fa-lock"></i>
+											<i class="fas fa-lock-open"></i>
 										</span>
 										<h5>
 											<a href="./qvi_1.html">İnternetdə video mühazirələr</a>
@@ -859,7 +859,7 @@
 								<div class="box-content">
 									<div class="content">
 										<span class="icon">
-											<i class="fas fa-lock"></i>
+											<i class="fas fa-lock-open"></i>
 										</span>
 										<h5>
 											<a href="./qvi_1.html">DİM-in yenilikləri barədə SMS məlumatlandırma</a>
@@ -901,7 +901,7 @@
 								<div class="box-content">
 									<div class="content">
 										<span class="icon">
-											<i class="fas fa-lock"></i>
+											<i class="fas fa-lock-open"></i>
 										</span>
 										<h5>
 											<a href="./qvi_1.html">Vətəndaşların DİM-in rəhbərliyinin və məsul
